kubernetes/gitlab/gitlab-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30222
    - name: registry-http
      port: 5050
      targetPort: 5050
      nodePort: 30550
  selector:
    app: gitlab
