kubernetes/gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Inform Ingress that the backend service speaks HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # Disable request body size limit
spec:
  rules:
    - host: gitlab.omni-rs.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab
              port:
                number: 443
  tls:
  - hosts:
    - gitlab.omni-rs.com
    secretName: omni-rs-com-tls-sub
